[package]
name = "test_dir"
version = "0.2.0"
authors = ["Rafał Pachołek <rafalpacholek@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Easy creation of temporary file structure for test purpose."
readme = "README.md"
repository = "https://github.com/rpacholek/test_dir"
keywords = [ "test", "dir", "file", "directory", "temp" ]
categories = [ "development-tools::testing" ]

[dependencies]
rand = "0.8"
